--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "type": "module",
+  "bin": {
+    "gendiff": "bin/gendiff.js"
+  },
   "description": "[![Actions Status](https://github.com/AlexanderAverin/backend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/AlexanderAverin/backend-project-lvl2/actions)",
   "main": "index.js",
   "scripts": {
