--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "[![Actions Status](https://github.com/AlexanderAverin/backend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/AlexanderAverin/backend-project-lvl2/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "repository": {
     "type": "git",
@@ -21,11 +21,16 @@
   },
   "homepage": "https://github.com/AlexanderAverin/backend-project-lvl2#readme",
   "dependencies": {
-    "commander": "^8.1.0"
+    "@jest/globals": "^27.0.6",
+    "commander": "^8.1.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.0"
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-jest": "^24.4.0",
+    "jest": "^27.0.6",
+    "prettier": "2.3.2"
   }
 }
