--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "[![Actions Status](https://github.com/AlexanderAverin/backend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/AlexanderAverin/backend-project-lvl2/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "test-coverage": "NODE_OPTIONS=--experimental-vm-modules npx jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "dependencies": {
     "@jest/globals": "^27.0.6",
     "commander": "^8.1.0",
+    "js-yaml": "^3.14.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
